P4ADEV-2148 getFileFromStorage