@@ -5,12 +5,10 @@ import it.gov.pagopa.pu.send.dto.DocumentDTO;
 import it.gov.pagopa.pu.send.exception.InvalidSignatureException;
 import it.gov.pagopa.pu.send.exception.UploadFileException;
 import it.gov.pagopa.pu.send.util.FileUtils;
-import java.io.File;
 import java.io.FileNotFoundException;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -18,24 +16,26 @@ import org.springframework.stereotype.Service;
 public class SendUploadFacadeServiceImpl implements SendUploadFacadeService {
 
   private final SendUploadClient sendUploadClient;
+  private final FileRetrieverService fileRetrieverService;
 
-  public SendUploadFacadeServiceImpl(SendUploadClient sendUploadClient) {
+  public SendUploadFacadeServiceImpl(SendUploadClient sendUploadClient,
+    FileRetrieverService fileRetrieverService) {
     this.sendUploadClient = sendUploadClient;
+    this.fileRetrieverService = fileRetrieverService;
   }
 
   @Override
-  public Optional<String> uploadFile(String sendNotificationId, DocumentDTO documentDTO) {
-    //TODO edit file retrieve with P4ADEV-2148
-    String fileName = "tmp/sendNotificationId" + "_" + documentDTO.getFileName();
+  public Optional<String> uploadFile(Long organizationId, String sendNotificationId, DocumentDTO documentDTO) {
+    String fileName = sendNotificationId + "_" + documentDTO.getFileName();
     try {
-      File file = new ClassPathResource(fileName).getFile();
-      if (!file.exists() || !file.isFile())
+      InputStream inputStream = fileRetrieverService.retrieveFile(organizationId, fileName);
+      if(inputStream==null)
         throw new FileNotFoundException("File not found: " + documentDTO.getFileName());
 
-      if(!FileUtils.calculateFileHash(file).equals(documentDTO.getDigest()))
+      if(!FileUtils.calculateFileHash(inputStream).equals(documentDTO.getDigest()))
         throw new InvalidSignatureException("File "+documentDTO.getFileName()+" has not a valid signature");
 
-      byte[] fileBytes = Files.readAllBytes(file.toPath());
+      byte[] fileBytes = inputStream.readAllBytes();
       return sendUploadClient.upload(documentDTO, fileBytes);
     } catch (Exception e) {
       throw new UploadFileException(e.getMessage());
